[gd_scene load_steps=11 format=3 uid="uid://sv2vnvxpi2cd"]

[ext_resource type="Script" uid="uid://bhwr6fjp4kyrj" path="res://player.gd" id="1_cqa3f"]
[ext_resource type="Texture2D" uid="uid://bpxvuywnru6cc" path="res://art/playerGrey_up1.png" id="1_jfmsi"]
[ext_resource type="Texture2D" uid="uid://dhkxtrjwausw5" path="res://art/playerGrey_up2.png" id="2_8w5nh"]
[ext_resource type="PackedScene" uid="uid://ctx1vop7pj2d8" path="res://projectile.tscn" id="2_dw050"]
[ext_resource type="Texture2D" uid="uid://dbqorye71pgv0" path="res://art/playerGrey_walk1.png" id="3_wy4gw"]
[ext_resource type="Texture2D" uid="uid://ddf71i760b6u5" path="res://art/playerGrey_walk2.png" id="4_8eunw"]
[ext_resource type="Texture2D" uid="uid://di7w11ic6it7w" path="res://art/record.png" id="6_7sr1n"]
[ext_resource type="Texture2D" uid="uid://bobctvi7ene88" path="res://art/triangle.png" id="7_1jxqw"]

[sub_resource type="SpriteFrames" id="SpriteFrames_eu4vr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_jfmsi")
}, {
"duration": 1.0,
"texture": ExtResource("2_8w5nh")
}],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_wy4gw")
}, {
"duration": 1.0,
"texture": ExtResource("4_8eunw")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_nf3dp"]
radius = 27.0
height = 68.0

[node name="Player" type="Area2D"]
position = Vector2(225, 176)
script = ExtResource("1_cqa3f")
projectile_scene = ExtResource("2_dw050")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_eu4vr")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_nf3dp")

[node name="Shielded" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.505882)
scale = Vector2(0.15, 0.15)
texture = ExtResource("6_7sr1n")

[node name="Gun" type="Sprite2D" parent="."]
visible = false
scale = Vector2(0.05, 0.05)
texture = ExtResource("7_1jxqw")
offset = Vector2(940, 0)

[node name="Marker2D" type="Marker2D" parent="Gun"]
position = Vector2(940, 0)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="update_shields" from="." to="." method="_on_update_shields"]
